add go; and linux command; add mongodb build index